fix: [PIE-1161]: alignment issue in pipeline card (#5175)
* fix: [PIE-1161]: alignment issue in pipeline card

* fix: [PIE-1161]: alignment issue in pipeline card

--- a/src/modules/70-pipeline/pages/pipelines/views/PipelineCard/PipelineCard.module.scss
+++ b/src/modules/70-pipeline/pages/pipelines/views/PipelineCard/PipelineCard.module.scss
@@ -2,8 +2,6 @@
   &:global(.bp3-card) {
     width: 250px;
     padding: 0;
-  }
-  .pipelineInfo {
     overflow-wrap: anywhere;
   }
   .label {
@@ -33,20 +31,12 @@
     margin-bottom: -2px;
   }
   .cardBtns {
-    background-color: var(--white) !important;
     padding: 0px !important;
-    font-size: 13px !important;
-    font-weight: 500 !important;
-    height: 24px !important;
-    min-height: 24px;
-  }
-  .runBtn {
-    border: 1px solid var(--green-600) !important;
-    color: var(--green-600) !important;
-    width: 62px;
-  }
-  .viewExecutionsBtn {
-    border: 1px solid var(--primary-7) !important;
-    flex-grow: 1;
+    &.runBtn {
+      width: 62px;
+    }
+    &.viewExecutionsBtn {
+      flex-grow: 1;
+    }
   }
 }
